--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
       </head>
       <body>
+        <div class="block-page">
         <div class="login-form">
           <h2>Авторизация</h2>
           <form id="login-form" method="post">
@@ -20,6 +21,19 @@
             </div>
           </form>
           <p>Нет аккаунта? <a href="registration.html">Зарегистрируйтесь</a></p>
+        </div>
+      </div>
+
+        <div class="waveWrapper waveAnimation">
+          <div class="waveWrapperInner bgTop">
+            <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')"></div>
+          </div>
+          <div class="waveWrapperInner bgMiddle">
+            <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')"></div>
+          </div>
+          <div class="waveWrapperInner bgBottom">
+            <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')"></div>
+          </div>
         </div>
       </body>
 </html>
