--- a/registration.html
+++ b/registration.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <div class="block-page1">
     <div class="registration-form">
       <h2>Регистрация</h2>
       <form id="registration-form" method="post">
@@ -25,5 +26,18 @@
       </form>
       <p>Уже есть аккаунт? <a href="main.html">Авторизуйтесь</a></p>
     </div>
+  </div>
+
+  <div class="waveWrapper waveAnimation">
+    <div class="waveWrapperInner bgTop">
+      <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')"></div>
+    </div>
+    <div class="waveWrapperInner bgMiddle">
+      <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')"></div>
+    </div>
+    <div class="waveWrapperInner bgBottom">
+      <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')"></div>
+    </div>
+  </div>
   </body>
 </html>
