--- a/pages/main.html
+++ b/pages/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="mainstyle.css">
       </head>
       <body>
         <div class="block-page">
@@ -23,17 +23,5 @@
           <p>Нет аккаунта? <a href="registration.html">Зарегистрируйтесь</a></p>
         </div>
       </div>
-
-        <div class="waveWrapper waveAnimation">
-          <div class="waveWrapperInner bgTop">
-            <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')"></div>
-          </div>
-          <div class="waveWrapperInner bgMiddle">
-            <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')"></div>
-          </div>
-          <div class="waveWrapperInner bgBottom">
-            <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')"></div>
-          </div>
-        </div>
       </body>
 </html>
