--- a/pages/registration.html
+++ b/pages/registration.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" type="text/css" href="regstyle.css">
-</head>
-<body>
-  <div class="block-page1">
-    <div class="registration-form">
-      <h2>Регистрация</h2>
-      <form id="registration-form" method="post">
+  <head>
+    <title>Регистрация</title>
+    <link rel="stylesheet" href="/css/setting/reset.css">
+    <link rel="stylesheet" href="/css/setting/fonts.css">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" type="text/css" href="/css/style/regstyle.css">
+  </head>
+  <body>
+    <div class="block-page1">
+      <div class="registration-form">
+        <h2>Регистрация</h2>
+        <form id="registration-form" method="post">
         <div class="form-group">
           <label for="username">Имя пользователя:</label>
           <input type="text" id="username" name="username">
@@ -24,7 +28,7 @@
           <input type="submit" value="Зарегистрироваться">
         </div>
       </form>
-      <p>Уже есть аккаунт? <a href="main.html">Авторизуйтесь</a></p>
+      <p>Уже есть аккаунт? <a href="authorization.html">Авторизуйтесь</a></p>
     </div>
   </div>
   </div>
