--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -14,15 +14,15 @@
   <body>
     <div class="block-page">
       <div class="login-form">
-        <h2>Авторизация</h2>
+        <h2 class="autorization">Авторизация</h2>
         <form id="login-form" method="post">
           <div class="form-group">
-            <label for="login-username">Логин:</label>
-            <input type="text" id="login-username" name="login-username" />
+            <label for="login-username">Почта:</label>
+            <input type="text" id="login-username" name="login-username" class="inputbox"/>
           </div>
           <div class="form-group">
             <label for="login-password">Пароль:</label>
-            <input type="password" id="login-password" name="login-password" />
+            <input type="password" id="login-password" name="login-password" class="inputbox" />
           </div>
           <div class="form-group">
             <input
@@ -32,7 +32,7 @@
             />
           </div>
         </form>
-        <p>Нет аккаунта? <a href="registration.html">Зарегистрируйтесь</a></p>
+        <p class="noaccount">Нет аккаунта? <a href="registration.html">Зарегистрируйтесь</a></p>
       </div>
     </div>
   </body>
