--- a/pages/registration.html
+++ b/pages/registration.html
@@ -10,25 +10,29 @@
   <body>
     <div class="block-page1">
       <div class="registration-form">
-        <h2>Регистрация</h2>
+        <h2 class="registration">Регистрация</h2>
         <form id="registration-form" method="post">
+          <div class="form-group">
+            <label for="useremail">Почта:</label>
+            <input type="text" id="useremail" name="useremail" class="inputbox">
+          </div>
         <div class="form-group">
           <label for="username">Имя пользователя:</label>
-          <input type="text" id="username" name="username">
+          <input type="text" id="username" name="username" class="inputbox">
         </div>
         <div class="form-group">
           <label for="password">Пароль:</label>
-          <input type="password" id="password" name="password">
+          <input type="password" id="password" name="password" class="inputbox">
         </div>
         <div class="form-group">
           <label for="confirm-password">Подтвердите пароль:</label>
-          <input type="password" id="confirm-password" name="confirm-password">
+          <input type="password" id="confirm-password" name="confirm-password" class="inputbox">
         </div>
-        <div class="form-group">
+        <div class="btnreg">
           <input type="submit" value="Зарегистрироваться">
         </div>
       </form>
-      <p>Уже есть аккаунт? <a href="authorization.html">Авторизуйтесь</a></p>
+      <p class="yesaccount">Уже есть аккаунт? <a href="authorization.html">Авторизуйтесь</a></p>
     </div>
   </div>
   </div>
