--- a/pages/notes.html
+++ b/pages/notes.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="notes-container">
-      <h2>Создать заметку</h2>
+      <h2 class="zametka">Создать заметку</h2>
       <div id="note-form" class="note-form">
         <div class="form-group">
           <label for="note-title">Заголовок:</label>
