--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -28,11 +28,11 @@
             <input
               type="submit"
               value="Авторизоваться"
-              onclick='location.href="C:/Users/Student/Desktop/1/notes.html"'
+              onclick="location.href='/pages/notes.html'"
             />
           </div>
         </form>
-        <p class="noaccount">Нет аккаунта? <a href="registration.html">Зарегистрируйтесь</a></p>
+        <p class="noaccount">Нет аккаунта? <a href="registration.html" class="noaccount1">Зарегистрируйтесь</a></p>
       </div>
     </div>
   </body>
