--- a/pages/registration.html
+++ b/pages/registration.html
@@ -29,10 +29,13 @@
           <input type="password" id="confirm-password" name="confirm-password" class="inputbox">
         </div>
         <div class="btnreg">
-          <input type="submit" value="Зарегистрироваться">
+          <input 
+          type="submit" 
+          value="Зарегистрироваться"
+          onclick="location.href='/pages/authorization.html'">
         </div>
       </form>
-      <p class="yesaccount">Уже есть аккаунт? <a href="authorization.html">Авторизуйтесь</a></p>
+      <p class="yesaccount">Уже есть аккаунт? <a href="authorization.html" class="yesaccount1">Авторизуйтесь</a></p>
     </div>
   </div>
   </div>
