--- a/pages/notes.html
+++ b/pages/notes.html
@@ -33,7 +33,14 @@
     </div>
 
     <div class="notes-list" id="notes-list">
-      <!-- Existing notes will be displayed here -->
+      <ul>
+        <li>
+          <span>
+            Первая
+          </span>
+          
+        </li>
+      </ul>
     </div>
 
     
