--- a/pages/registration.html
+++ b/pages/registration.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/setting/fonts.css">
     <link rel="stylesheet" href="/css/app.css">
     <link rel="stylesheet" type="text/css" href="/css/style/regstyle.css">
+    <script src="/js/authorization.js" defer></script>
   </head>
   <body>
     <div class="block-page1">
